--- a/1.VScode工具.md
+++ b/1.VScode工具.md
@@ -6,16 +6,16 @@ Hello，掘友们好，来推荐一波`VScode`插件！
 
 ## 通用插件
 
-| 工具名字        |             工具用途             |      |
-| --------------- | :------------------------------: | ---- |
-| live Server     |       修改文件可以更新页面       |      |
-| Code Runner     |         只执行指定的代码         |      |
-| Project Manager | 项目管理，快速找到并打开项目目录 |      |
-| GitLens         |          助力于git管理           |      |
-| Bookmarks       |        用做书签，快速定位        |      |
-| TODO Highlight  |          标记要做的事情          |      |
-| cataRemark      |          给文件添加注释          |      |
-| Remote - SSH    |           连接云服务器           |      |
+| 工具名字        |                 工具用途                  |      |
+| --------------- | :---------------------------------------: | ---- |
+| live Server     |  修改文件可以更新页面(快速写个html demo)  |      |
+| Code Runner     |            只执行指定的JS代码             |      |
+| Project Manager |     项目管理，快速找到并打开项目目录      |      |
+| GitLens         | 助力于git管理,支持点点点用git stash等功能 |      |
+| Bookmarks       |            用做书签，快速定位             |      |
+| TODO Highlight  |              标记要做的事情               |      |
+| cataRemark      |              给文件添加注释               |      |
+| Remote - SSH    |               连接云服务器                |      |
 
 ## Vue选手专属
 
@@ -23,7 +23,6 @@ Hello，掘友们好，来推荐一波`VScode`插件！
 | ------------------------------------- | ----------- |
 | Vue 3 Snippets                        | Vue代码片段 |
 | Volar(Vue2是vuter,只开启一个防止冲突) | Vue代码高亮 |
-| TypeScript Vue Plugin (Volar)         |             |
 
 ## React选手专属
 
@@ -49,5 +48,9 @@ Hello，掘友们好，来推荐一波`VScode`插件！
 | background                | vscode背景图      |
 | Prettier - Code formatter | 代码风格          |
 | ESLint                    | 代码规范          |
+| Polacode                  | 好看的截图插件    |
+| Better Comments           | 多种注释          |
+
+推荐文章：https://juejin.cn/post/7123367320109449230
 
 掘友们有不错的插件推荐，可以在评论区留言！
